# toyrobot

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  config.cmake  setup.sh
src/: main.cpp
src/app/: Application.cpp  Application.hpp  CMakeLists.txt  Command.hpp  CommandParser.cpp  CommandParser.hpp  IMap.hpp  Position.cpp  Position.hpp  ToyRobot.cpp  ToyRobot.hpp
src/app/tests/: TestCommandParser.cpp  TestToyRobot.cpp
src/app/tests/mocks/: MapMock.hpp
src/lib/: CMakeLists.txt  Command.hpp  Position.cpp  Position.hpp
src/lib/parser/: CommandParser.cpp  CommandParser.hpp
src/lib/tests/: TestCommandParser.cpp
src/map/: CMakeLists.txt  ConcreteMap.cpp
src/map/mocks/: MapMock.hpp
tests/input-data/: input.txt
tests/integration-tests/: CMakeLists.txt  ToyRobotMovementTests.cpp
tests/unit-tests/: CMakeLists.txt
